# taiga-api

./: .dockerignore  .env.docker  .env.example  .gitignore  .gitlab-ci.yml  .llms  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  DOCKER_README.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  taiga_sync.db
.codex/: config.toml
alembic/: env.py
alembic/versions/: 4bb2e9540b5d_add_draft_board_table.py  fc0a31b11810_initial_migration_with_project_epic_.py
app/: __init__.py  __main__.py  ai_reorganizer.py  auth.py  crud.py  database.py  main.py  markdown_parser.py  metrics_exporter.py  models.py  schemas.py  simple_json_api.py  sync_service.py  taiga_client.py
app/templates/: story_map.html  table_map.html
docs/: grafana-setup.md
grafana/dashboards/: taiga-metrics.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
prometheus/: prometheus.yml
scripts/: actualizar_remoto.sh  analyze-changes.sh  fetch_stories_from_api.py  import_map_mvp.py  init-grafana-db.sql  setup-dev.sh  setup-git-hooks.sh  update-changelog.sh  update.sh
tests/: __init__.py  conftest.py  test_main.py  test_taiga_client.py
util/: API-DOCUMENTATION.md  DEVELOPMENT.md  MCP_SETUP.md  README.md  commit-guidelines.md  d5-catalogo-documentacion.md  ejemplo-desglose-tareas.md  kit-maria-integration.md  llm-workflow.md  project-status.md  system-overview.md  taiga-devtools-example.md  troubleshooting-uv-python.md  vuce-sidom-architecture.md
util/llm-docs-proyect/: .gitkeep
